--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>ReadNotify</title>
 </head>
@@ -162,9 +162,9 @@
             </div>
         </div>
     </footer>
-    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        // AOS.init();
+        AOS.init();
         let menu = document.getElementsByClassName('menubtn')[0];
         let secnav = document.getElementsByClassName('secondarynav')[0];
         menu.addEventListener('click' , ()=>{
