--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
         <div data-aos="flip-up" style="text-align: center; color: #666468; margin-top: 4rem;">Unlock The Potential of
             Your Email Communication With Our Cutting-Edge Tracking Solution</div>
         <div class="mailimgtitle" data-aos="fade-right">Track Any Email</div>
-        <div class="mailimg">
-            <img src="gmail.png" alt="Not Found" data-aos="fade-right">
-            <img src="outlook.png" alt="Not Found" data-aos="zoom-in">
-            <img src="applemail.png" alt="Not Found" data-aos="fade-left">
+        <div class="mailimg" data-aos="fade-left">
+            <img src="gmail.png" alt="Not Found">
+            <img src="outlook.png" alt="Not Found">
+            <img src="applemail.png" alt="Not Found">
         </div>
     </main>
     <footer>
